--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,8 +1,19 @@
-body, html {
-  margin: 0;
-  font-family: 'Playfair Display', serif;
-  background-color: #fdfcfb;
-  color: #3e2c1e;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html , body{
+    height: 100%;
+    width: 100%;
+    /* margin: 0; */
+    font-family: 'Playfair Display', serif;
+    background-color: #fdfcfb;
+    color: #3e2c1e;
+}
+
+.App{
+  padding: 0;
 }
 
 .header {
@@ -66,6 +77,7 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .hero::after {
